2011-07-21  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: Fixed a typo.

2011-07-21  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/status_monitor.php: Fixed an empty group check
	and a subquery_enterprise not exist variables for bug 3371206

2011-07-21  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: Removed already existing
	  tables.

2011-07-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Set default values to width and height
	parameters in purge graph.

	* godmode/setup/os.list.php
	godmode/users/profile_list.php: Fixed typica bugs of foreach with
	no array variable

2011-07-21  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control: Removed php5-zlib (zlib comes with the default PHP
	  installation).

2011-07-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_menu.php: Fixed a bug of the side menu
	when the url have no sec2 parameter

2011-07-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_groups.php
	godmode/modules/manage_network_templates.php
	godmode/modules/manage_network_templates_form.php: Fixed few
	issues foreach errors
	
	* godmode/agentes/agent_manager.php
	godmode/massive/massive_edit_agents.php: Fixed icon agent colors
	bug

2011-07-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_menu.php: Fixed side menu confitions 
	to draw in bold style the selected subsections to allow
	secondary parameters like "&tab=agents" in the subsections

2011-07-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/menu.php: Added users massive operation to the
	left menu into the massive ops category

2011-07-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_agents.php: Fixed agent icon
	missed in the massive operations merged from my own fix in 
	the agent edition of july 19th

2011-07-20  Sergio Martin <sergio.martin@artica.es>
